<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Product Manager</string>
    <string name="scan">Scan</string>
    <string name="sync">Sync</string>
    <string name="add">Add to database</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_to_db">AddToDBActivity</string>
    <string name="add_to_db">Add To Local DataBase</string>
    <string name="ean">EAN</string>
    <string name="desc">Description </string>
    <string name="size">Size</string>
    <string name="number">number</string>
    <string name="phone_hint">phone_hint</string>
    <string name="quantity">Quantity</string>
    <string name="enter_quantity">Enter Quantity</string>

</resources>
