<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.productmanager.AddToDBActivity$PlaceholderFragment" >
    
    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="8pt" >
            
	    <TextView
	        android:id="@+id/product_details_ean"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_column="0"
	        android:text = "@string/ean"/>
            
	    <TextView
	        android:id="@+id/product_details_ean_2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_column="1"/>

    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
	    android:textSize="8pt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp" >      
            
	    <TextView
	        android:id="@+id/product_details_desc"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text = "@string/desc"/>  
            
	    <TextView
	        android:id="@+id/product_details_desc_2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"/>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:textSize="8pt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp" >      
            
	    <TextView
	        android:id="@+id/product_details_size"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text = "@string/size"/>
            
	    <TextView
	        android:id="@+id/product_details_size_2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"/>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:textSize="8pt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp" >      
            
	    <TextView
	        android:id="@+id/product_quantity"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text = "@string/quantity"/>
    
	    <EditText
		    android:id="@+id/quantity"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:inputType="number" />
    </TableRow>
    
    </TableLayout>

    <Button
        android:id="@+id/add_to_database"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tableLayout1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/add_to_db" />

</RelativeLayout>
